projeto-darede/desafio4/k8s/appa_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-a
  sessionAffinity: None
  type: ClusterIP
