projeto-darede/desafio4/k8s/appb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b-service

spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30020
  selector:
    name: app-b-pod
    app: app-b
