projeto-darede/desafio4/k8s/appd_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-d-service

spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30040
  selector:
    name: app-d-pod
    app: app-d
