projeto-darede/desafio4/k8s/ingress_apps_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps-ab
  namespace: default
spec:
  rules:
  - host: "appc.henrq.tk"
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-c-service
            port:
              number: 80

  - host: "appd.henrq.tk"
  - http:
      path:  
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: app-d-service
            port:
              number: 80
